--- a/index.css
+++ b/index.css
@@ -1,11 +1,14 @@
-html, body, p {
-    margin: 20px;
+html, body {
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
     font-size: 20px;
     font-family: "Helvetica", "Arial", sans-serif;
 }
 
 h1, p {
     font-weight: 200;
+    margin: 20px;
 }
 
 li {
