--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ li {
 
 /*------------------- Example 2 -------------------*/
 
-.blueCircle {
+.blueShape {
     fill: lightskyblue;
     stroke: mediumblue;
     stroke-width: 3px;
