Polish up tutorial
Added a bunch of comments to make this more standalone and not require
me talking through the whole thing. :)

--- a/index.css
+++ b/index.css
@@ -6,9 +6,13 @@ html, body {
     font-family: "Helvetica", "Arial", sans-serif;
 }
 
-h1, p {
+h1, h2, p {
     font-weight: 200;
     margin: 20px;
+}
+
+h2 {
+    font-size: 15px;
 }
 
 li {
