Slight simplification on lesson0
Using intermediate variables on the data function was a bit wordy and
unnecessary.

--- a/index.css
+++ b/index.css
@@ -19,6 +19,10 @@ li {
     padding: 5px;
 }
 
+.filename {
+    font-family: monospace;
+}
+
 /*------------------- Example 2 -------------------*/
 
 .blueShape {
